data/collection/fixes/descriptions/scala/scala-5529
Compiling this sample:


```
package test;

object Test {
  sealed class File {
	val i = 1
  }
 
  sealed class Dir extends File {
  }
  
  type File
}
```
via:
scalac test.scala

gives:
test.scala:11: error: File is already defined as class File
  type File
       ^
error: java.lang.StackOverflowError
	at scala.reflect.generic.HasFlags$class.isDeferred(HasFlags.scala:173)
	at scala.reflect.generic.Symbols$AbsSymbol.isDeferred(Symbols.scala:10)
	at scala.tools.nsc.symtab.Symbols$TypeSymbol.isAliasType(Symbols.scala:1877)
	at scala.tools.nsc.symtab.Types$TypeRef.typeSymbol(Types.scala:1760)
	at scala.tools.nsc.symtab.Types$TypeRef.typeSymbol(Types.scala:1760)
	at scala.tools.nsc.symtab.Types$TypeRef.typeSymbol(Types.scala:1760)
	at scala.tools.nsc.symtab.Types$TypeRef.typeSymbol(Types.scala:1760)
	at scala.tools.nsc.symtab.Types$TypeRef.typeSymbol(Types.scala:1760)
	at scala.tools.nsc.symtab.Types$TypeRef.typeSymbol(Types.scala:1760)
	at scala.tools.nsc.symtab.Types$TypeRef.typeSymbol(Types.scala:1760)

In Eclipse this renders IDE completely unusable and persists after restart.